added a solution extra task #3

--- a/hw1/python-basics-hw.ipynb
+++ b/hw1/python-basics-hw.ipynb
@@ -278,20 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -307,23 +296,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите слово латинскими буквами: testing\n",
+      "t\n"
+     ]
     }
    ],
    "source": [
-    "\n"
+    "word = input('Введите слово латинскими буквами: ')\n",
+    "if len(word) % 2 != 0:\n",
+    "    print(word[int(len(word) / 2 - 0.5)])\n",
+    "else:\n",
+    "    print(word[int(len(word) / 2 - 1) : int(len(word) / 2 + 1)])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
